--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-12  Kryazhevskikh Sergey  <soliverr@gmail.com>
+
+	* Fixed GitHub Bug #1
+
 2014-04-07  Kryazhevskikh Sergey  <soliverr@gmail.com>
 
     * Project moved from launchpad.net to github.com
