Add Fixes #4 to Changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2014-08-12  Kryazhevskikh Sergey  <soliverr@gmail.com>
 
 	* Fixed GitHub Bug #1
+	* Fixed GitHub Bug #4
 
 2014-04-07  Kryazhevskikh Sergey  <soliverr@gmail.com>
 
