--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-13  Kryazhevskikh Sergey  <soliverr@gmail.com>
+
+	* Fixed GitHub Enhancement #3
+
 2014-08-12  Kryazhevskikh Sergey  <soliverr@gmail.com>
 
 	* Fixed GitHub Bug #1
