--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-08-13  Kryazhevskikh Sergey  <soliverr@gmail.com>
 
+	* Fixed GitHub Enhancement #2
 	* Fixed GitHub Enhancement #3
 
 2014-08-12  Kryazhevskikh Sergey  <soliverr@gmail.com>
