--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bash-prompt (2.1-3) stable; urgency=low
+
+  * Install bash-prompt.sh into /usr/bin/bash-prompt
+  * Install bash-prompt.1 man page
+
+ -- Kryazhevskikh Sergey <soliverr@gmail.com>  Wed, 13 Aug 2014 10:27:20 +0600
+
 bash-prompt (2.1-2) stable; urgency=low
 
   * New upstream release
