--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bash-prompt (2.1-3.1) stable; urgency=low
+
+  * Fixed GitHub bug #6: export PROMPT_COMMAND variable
+
+ -- Kryazhevskikh Sergey <soliverr@gmail.com>  Thu, 30 Oct 2014 15:54:28 +0500
+
 bash-prompt (2.1-3) stable; urgency=low
 
   * Install bash-prompt.sh into /usr/bin/bash-prompt
